src/test/compile-fail/ext-noname.rs
// error-pattern:expected a syntax expander name

fn main() {
  #();
}